--- a/html/ruleta.html
+++ b/html/ruleta.html
@@ -50,7 +50,7 @@
                         <div class="contenedor_info">
                             <h2>Total de plata: <span id="monto_total_jugable">$100</span></h2>
                             <h3 id="text_ganador">El numero ganador es: </h3>
-                            <div>
+                            <div class="contenedor_apuestas">
                                 <input type="number" placeholder="Monto a apostar" class="input_apuestas" id="input_apuestas" required>
                                 <input type="number" placeholder="numero a jugar" class="input_apuestas" id="input_numero" required>
                                 <input type="button" id="enviar_apuestas" value="Apostar"></input>
